--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar"></nav>
+<nav class="navbar">
     <ul>
         <li><a routerLink="/bank" class="task-list" class="task-list">Dashboard</a></li>
 
