--- a/frontend/src/app/auth/components/login/login.component.html
+++ b/frontend/src/app/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form"></form>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <label>
         Username:
         <input type="text" formControlName="username" />
