--- a/frontend/src/app/auth/components/logout/logout.component.html
+++ b/frontend/src/app/auth/components/logout/logout.component.html
@@ -1,3 +1,3 @@
-<div class="logout-container"></div>
+<div class="logout-container">
     <button (click)="logout()" class="logout-button">Logout</button>
 </div>
